--- a/asherrepublic/package.json
+++ b/asherrepublic/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://adonispuente.github.io/AsherRepublic",
   "name": "asherrepublic",
   "version": "0.1.0",
-  "homepage": "https://adonispuente.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
