--- a/asherrepublic/package.json
+++ b/asherrepublic/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adonispuente.github.io/AsherRepublic",
+  "homepage": "http://ashersrepublic.com",
   "name": "asherrepublic",
   "version": "0.1.0",
   "private": true,
